<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckoutActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="84dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_logo_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_sans_regular"
        android:textColor="@color/blackPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout"
        tools:listitem="@layout/item_cardview_cart" />

    <!--nama-->
    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="270dp"
        android:text="@string/nama"
        android:textSize="12sp"
        android:textColor="@color/greyInvoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--nomor telpon-->
    <TextView
        android:id="@+id/no_telpon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="176dp"
        android:text="@string/no_hp"
        android:textSize="12sp"
        android:textColor="@color/greyInvoice"
        app:layout_constraintStart_toStartOf="@id/nama"
        app:layout_constraintTop_toBottomOf="@+id/checkout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telpon_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/nama_text_input"
        app:layout_constraintTop_toBottomOf="@+id/no_telpon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telpon_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup_metode_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_text_input">

        <RadioButton
            android:id="@+id/rd_btn_gopay"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/gopay"
            android:textSize="16dp"
            android:fontFamily="@font/nunito_sans_regular"/>
        <RadioButton
            android:id="@+id/rd_btn_cash"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/cash"
            android:textSize="16dp"
            android:fontFamily="@font/nunito_sans_regular"/>
    </RadioGroup>

    <ImageButton
        android:id="@+id/chekout_pay_btn"
        android:layout_width="332dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="22dp"
        android:background="@color/pinkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_metode_bayar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:textColor="@color/whitePrimary"
        android:fontFamily="@font/nunito_sans_regular"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/chekout_pay_btn"
        app:layout_constraintEnd_toEndOf="@+id/chekout_pay_btn"
        app:layout_constraintStart_toStartOf="@+id/chekout_pay_btn"
        app:layout_constraintTop_toTopOf="@+id/chekout_pay_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>